# msgpack-python-typed-ints

./: MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yaml  test.yml  wheel.yml
benchmark/: benchmark.py
docker/: runtests.sh
msgpack/: __init__.py  _packer.pyx  _unpacker.pyx  fallback.py  msgint.py  pack_template.h  unpack.h
msgpacktypedints/: _packer.pyx  unpack_template.h
test/: test_buffer.py  test_case.py  test_except.py  test_extension.py  test_format.py  test_limits.py  test_memoryview.py  test_newspec.py  test_obj.py  test_pack.py  test_read_size.py  test_seq.py  test_sequnpack.py  test_stricttype.py  test_subtype.py  test_timestamp.py  test_unpack.py
