[metadata]
name = msgpacktypedints
#version = attr: msgpacktypedints.__version__
version = attr: msgpacktypedints.version
license = Apache 2.0
author = SutandoTsukai181
author_email = mosamaeldeeb@gmail.com
description = MessagePack serializer with strict typed ints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SutandoTsukai181/msgpack-python-typed-ints

project_urls =
    Documentation = https://msgpack-python.readthedocs.io/
    Source = https://github.com/SutandoTsukai181/msgpack-python-typed-ints
    Tracker = https://github.com/SutandoTsukai181/msgpack-python-typed-ints/issues

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[flake8]
max_line_length = 100

